MQTT Web setup added
Added websetup to webpage.
Added save of information from webpage to preferences
Added read of information from preferences to use with setup()
Removed global variable to MQTT setup
Changed MQTT delay time to 3sec

--- a/NES-MEP-UI-SPIFFS/www_setupIndex.html
+++ b/NES-MEP-UI-SPIFFS/www_setupIndex.html
@@ -15,6 +15,11 @@
 			<input name=userlogin placeholder=Login value="###user_login###">
 			<input name=userpwd placeholder=Password type=Password value="###user_pwd###">
 			<br>
+			MQTT setup: Server, user login and password:<br>
+			<input name=mqttserver placeholder=MQTTServer value="###mqtt_server###">
+			<input name=mqttuser placeholder=Login type=Password value="###mqtt_user_login###">
+			<input name=mqttpassword placeholder=Password value="###mqtt_user_pwd###">
+			<br>
 			MEP key for power meter:<br>
 			<input name=mepkey placeholder="MEP Key as ASCII String (20 characters), no spaces" type=Password value="###mep_key###">
 			<br>
