Small MQTT changes - not verified and tested - only compiled without errors
Tried to update code with changes from @mist1971.
Compiles perfectly. Can't get the SPIFF tool to work, might be because Arduino IDE > 2.0 :( Don't have time to fix right now. Any hints to get it working i appreciated, as I can then test myself.
Code "converted" back to the old files from Arduino IDE as the Dabbler team are using that dev tool.
Still not tested.

--- a/NES-MEP-UI-SPIFFS/www_setupIndex.html
+++ b/NES-MEP-UI-SPIFFS/www_setupIndex.html
@@ -15,13 +15,13 @@
 			<input name=userlogin placeholder=Login value="###user_login###">
 			<input name=userpwd placeholder=Password type=Password value="###user_pwd###">
 			<br>
-			MQTT setup: Server, user login and password:<br>
+			MQTT setup: Server, user login and password: (Experimental and not tested - use at own risk)<br>
 			<input name=mqttenable value="###mqtt_enable###">
 			<input name=mqttserver placeholder=ServerIP value="###mqtt_server###">
 			<input name=mqttuser placeholder=Username value="###mqtt_user###">
 			<input name=mqttpassword placeholder=Password type=Password value="###mqtt_password###">
 			<br>
-			Home Assistant: Enable Auto Disovery
+			Home Assistant: Enable Auto Disovery (Experimental and not tested - use at own risk)
 			<input name=hassautodiscovery value="###hass_autodiscovery###">
 			<br>
 			MEP key for power meter:<br>
