--- a/NES-MEP-UI-SPIFFS/www_setupIndex.html
+++ b/NES-MEP-UI-SPIFFS/www_setupIndex.html
@@ -22,7 +22,7 @@
 			<input name=mqttpassword placeholder=Password type=Password value="###mqtt_password###">
 			<br>
 			Home Assistant: Enable Auto Disovery (Experimental and not tested - use at own risk)
-			<input name=hassautodiscovery value="###hass_autodiscovery###">
+			<input name=hassautodiscovery value="###hassAutodiscov###">
 			<br>
 			MEP key for power meter:<br>
 			<input name=mepkey placeholder="MEP Key as ASCII String (20 characters), no spaces" type=Password value="###mep_key###">
