--- a/NES-MEP-UI-SPIFFS/www_setupIndex.html
+++ b/NES-MEP-UI-SPIFFS/www_setupIndex.html
@@ -8,18 +8,19 @@
 			<input name=LoginSession type=hidden value=###LoginSession###>
 			<h1>ESP32-MEP Setup</h1>
 			WIFI SSID and password:<br>
-			<input name=ssid placeholder=SSID value="###wifi_ssid###">
-			<input name=pwd placeholder=Password type=Password value="###wifi_pwd###">
+			<input name=ssid maxlength="33" placeholder=SSID value="###wifi_ssid###">
+			<input name=pwd maxlength="65" placeholder=Password type=Password value="###wifi_pwd###">
 			<br>
 			User login and password:<br>
-			<input name=userlogin placeholder=Login value="###user_login###">
-			<input name=userpwd placeholder=Password type=Password value="###user_pwd###">
+			<input name=userlogin maxlength="33" placeholder=Login value="###user_login###">
+			<input name=userpwd maxlength="65" placeholder=Password type=Password value="###user_pwd###">
 			<br>
 			MQTT setup: Server, user login and password: (Experimental and not tested - use at own risk)<br>
 			<input name=mqttenable value="###mqtt_enable###">
-			<input name=mqttserver placeholder=ServerIP value="###mqtt_server###">
-			<input name=mqttuser placeholder=Username value="###mqtt_user###">
-			<input name=mqttpassword placeholder=Password type=Password value="###mqtt_password###">
+			<input name=mqtttopic maxlength="25" placeholder=Topic value="###mqtt_topic###">
+			<input name=mqttserver maxlength="15" placeholder=ServerIP value="###mqtt_server###">
+			<input name=mqttuser maxlength="33" placeholder=Username value="###mqtt_user###">
+			<input name=mqttpassword maxlength="65" placeholder=Password type=Password value="###mqtt_password###">
 			<br>
 			Home Assistant: Enable Auto Disovery (Experimental and not tested - use at own risk)
 			<input name=hassautodiscovery value="###hassAutodiscov###">
