--- a/NES-MEP-UI/data/www_setupIndex.html
+++ b/NES-MEP-UI/data/www_setupIndex.html
@@ -14,20 +14,19 @@
 			User login and password:<br>
 			<input name=userlogin maxlength="33" placeholder=Login value="###user_login###">
 			<input name=userpwd maxlength="65" placeholder=Password type=Password value="###user_pwd###">
-
 			<br>
-			<br>
-			MEP key for power meter:<br>
-			<input name=mepkey placeholder="MEP Key as ASCII String (20 characters), no spaces" type=Password value="###mep_key###">
-			<br>
-			<h1>MQTT Setup</h1>
-			MQTT topic, server, user login and password:<br>
-			MQTT Connection state: ###mqtt_connection_state_text###<br>
-			<input name=mqttenable value="###mqtt_enable###">1 for enable and 0 for disable
+			MQTT setup: Server, user login and password: (Experimental and not tested - use at own risk)<br>
+			<input name=mqttenable value="###mqtt_enable###">
 			<input name=mqtttopic maxlength="25" placeholder=Topic value="###mqtt_topic###">
 			<input name=mqttserver maxlength="15" placeholder=ServerIP value="###mqtt_server###">
 			<input name=mqttuser maxlength="33" placeholder=Username value="###mqtt_user###">
 			<input name=mqttpassword maxlength="65" placeholder=Password type=Password value="###mqtt_password###">
+			<br>
+			Home Assistant: Enable Auto Disovery (Experimental and not tested - use at own risk)
+			<input name=hassautodiscovery value="###hassAutodiscov###">
+			<br>
+			MEP key for power meter:<br>
+			<input name=mepkey placeholder="MEP Key as ASCII String (20 characters), no spaces" type=Password value="###mep_key###">
 			<br>
 			<input type=submit value="Save and restart">
 		</form>
