Some changes to MQTT information level, added LWT, updated script,
Added a link to a table with information regarding the MQTT topics and corresponding information
Updateded *.WWWS script to automaticly close itself after a few seconds :)
Added Last Will Topic, so if the MEP board somehow goes offline, it can be correctly detected through the MQTT broker.
Haven't created an entire new "MQTT setup page", as I'm not confident in creating endpoints yet.

--- a/NES-MEP-UI-SPIFFS/www_setupIndex.html
+++ b/NES-MEP-UI-SPIFFS/www_setupIndex.html
@@ -23,6 +23,7 @@
 			<h1>MQTT Setup</h1>
 			MQTT topic, server, user login and password:<br>
 			MQTT Connection state: ###mqtt_connection_state_text###<br>
+			<a href="/infoMqtt" target="_blank">MQTT information</a>
 			<input name=mqttenable value="###mqtt_enable###">1 for enable and 0 for disable
 			<input name=mqtttopic maxlength="25" placeholder=Topic value="###mqtt_topic###">
 			<input name=mqttserver maxlength="15" placeholder=ServerIP value="###mqtt_server###">
