Fix initial requests bug and minor html-file fixes while here
Bugfix: Missing response length on initial requests
Bugfix: Missing sessionID on link to MQTT information page
Bugfix: Wrong headlines on dashboard ("miliwatts (mW)" -> "watt (W)"
Improvements: Font color and table fixes on MQTT information page

--- a/NES-MEP-UI-SPIFFS/www_dashIndex.html
+++ b/NES-MEP-UI-SPIFFS/www_dashIndex.html
@@ -176,8 +176,8 @@
 		<td colspan="2" height="80" align="center"><H1><center>Reverse Active kilowatt hours (kWh) for L1, L2 and L3<div id="SevenSeg_Rev_Wh" style="height: 70px; width: fit-content;"></div></td>
 	  </tr>
 	  <tr>
-		<td colspan="2" align="center" style="border-bottom-width: 0px;"><H1><center>Forward milliwatt (mW)</center></H1></td>
-		<td colspan="2" align="center" style="border-bottom-width: 0px;"><H1><center>Reverse milliwatt (mW)</center></H1></td>
+		<td colspan="2" align="center" style="border-bottom-width: 0px;"><H1><center>Forward watt (W)</center></H1></td>
+		<td colspan="2" align="center" style="border-bottom-width: 0px;"><H1><center>Reverse watt (W)</center></H1></td>
 	  </tr>
 	  <tr>
 	    <td height="200" align="center" style="border-top-width: 0px; border-right-width: 0px;"><div id="gauge_Fwd_TotalW" style="width: 200px; height: 180px;"></div></td>
