--- a/NES-MEP-UI-SPIFFS/www_infoMqtt.html
+++ b/NES-MEP-UI-SPIFFS/www_infoMqtt.html
@@ -4,55 +4,54 @@
 	</head>
 	<body>
 		###FILE:/menu-include.html###
-		<h2 style="text-align: center;">All information from the MEP, will be delivered on the following topic with the following content, all JSON formatted.</h2>
+		<h2 style="text-align: center;"><font color="white">All information from the MEP, will be delivered on the following topic with the following content, all JSON formatted.</font></h2>
 		<table>
 			<tr>
 				<th>Topic</th>
 				<th>Information</th>
-				
 			</tr>
 			<tr>
-				<th>###mqtt_topic###/frequency/mydatajson</th>
-				<th>Grid frequency in mHz</th>
+				<td>###mqtt_topic###/frequency/mydatajson</td>
+				<td>Grid frequency in mHz</td>
 			</tr>
 			<tr>
-				<th>###mqtt_topic###/meterConsumptionFwd/mydatajson</th>
-				<th>
+				<td>###mqtt_topic###/meterConsumptionFwd/mydatajson</td>
+				<td>
 				Fwd_W: Total power consumption [W]<br>
 				Fwd_Avg_W: Total average power consumption for the past ? seconds [W]<br>
 				L[1,2,3]_Fwd_W: Power consumption on each phase [W]<br>
 				L[1,2,3]_Fwd_Avg_W: Average power consumption for the past ? seconds [W]
-				</th>
+				</td>
 			</tr>
 			<tr>
-				<th>###mqtt_topic###/meterConsumptionRev/mydatajson</th>
-				<th>
+				<td>###mqtt_topic###/meterConsumptionRev/mydatajson</td>
+				<td>
 				Rev_W: Total power production [W]<br>
 				Rev_Avg_W: Total average power production for the past ? seconds [W]<br>
 				L[1,2,3]_Rev_W: Power production on each phase [W]<br>
 				L[1,2,3]_Rev_Avg_W: Average power production for the past ? seconds [W]
-				</th>
+				</td>
 			</tr>
 			<tr>
-				<th>###mqtt_topic###/meterConsumptionTotal/mydatajson</th>
-				<th>
+				<td>###mqtt_topic###/meterConsumptionTotal/mydatajson</td>
+				<td>
 				Fwd_Act_Wh: Last state of total energy consumption [Wh]<br>
 				Rev_Act_Wh: Last state of total energy production [Wh]
-				</th>
+				</td>
 			</tr>
 			<tr>
-				<th>###mqtt_topic###/sensors/mydatajson</th>
-				<th>
+				<td>###mqtt_topic###/sensors/mydatajson</td>
+				<td>
 				L[1,2,3]_RMS_A: Current in each phase [mA]<br>
 				L[1,2,3]_RMS_V: Voltage on each phase [mV]<br>
 				L[1,2,3]_PF_Fac: Power Factor on each phase [CosPhi]<br>
 				ExportReactive_VAr: Current export of VAr<br>
 				ImportReative_VAr: Current import of VAr
-				</th>
+				</td>
 			</tr>
 			<tr>
-				<th>###mqtt_topic###/lwt/</th>
-				<th>Last will topic, to give information if sensor has lost connection to MQTT broker</th>
+				<td>###mqtt_topic###/lwt/</td>
+				<td>Last will topic, to give information if sensor has lost connection to MQTT broker</td>
 			</tr>
 		</table>
 	</body>
